fix: footer overlapped on mobile phone

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -132,6 +132,14 @@ body
     margin-top: 2rem
     margin-bottom: 2rem
 
+  #projects,
+  #archive,
+  #footer-post-container
+    margin-bottom: 50px
+
+  .post
+    margin-bottom: 50px
+
 @media (min-width: 480px)
   p
     text-align: justify
